--- a/imports/ui/components/home/home.html
+++ b/imports/ui/components/home/home.html
@@ -5,7 +5,7 @@
         <div id="btnPerfil" class="btnHome" ng-click="home.clicaProfile()">
             <img src="ic_account_circle_white_36dp.png" class="iconBtnHome"></img>
         </div>
-        <div id="btnWorld" class="btnHome">
+        <div id="btnWorld" class="btnHome" ng-click="home.clicaShop()">
             <img src="ic_favorite_white_36dp.png" class="iconBtnHome"></img>
         </div>
         <div id="btnFaturas" class="btnHome">
