--- a/imports/ui/components/shop/shop.html
+++ b/imports/ui/components/shop/shop.html
@@ -3,7 +3,95 @@
     <div id="lista">
         <div id="caixinha">
             <div id="tituloProduto">TITULO</div>
-            <img src="blusa.jpg" id="imgProduto"></img>
+            
+            <div id="informacoesProduto">
+                <div id="imagem">
+                    <img src="blusa.jpg" id="imgProduto"></img>
+                </div>
+                
+            </div>
+
+            <div id="botoesCaixinha">
+                <div class="btnCaixinha"></div>
+                <div class="btnCaixinha"></div>
+                <div class="btnCaixinha"></div>
+            </div>
+        </div>
+
+        <br>
+
+        <div id="caixinha">
+            <div id="tituloProduto">TITULO</div>
+            
+            <div id="informacoesProduto">
+                <div id="imagem">
+                    <img src="terno.jpg" id="imgProduto"></img>
+                </div>
+                
+            </div>
+
+            <div id="botoesCaixinha">
+                <div class="btnCaixinha"></div>
+                <div class="btnCaixinha"></div>
+                <div class="btnCaixinha"></div>
+            </div>
+        </div>
+
+        <br>
+
+        <div id="caixinha">
+            <div id="tituloProduto">TITULO</div>
+            
+            <div id="informacoesProduto">
+                <div id="imagem">
+                    <img src="blusa.jpg" id="imgProduto"></img>
+                </div>
+                
+            </div>
+
+            <div id="botoesCaixinha">
+                <div class="btnCaixinha"></div>
+                <div class="btnCaixinha"></div>
+                <div class="btnCaixinha"></div>
+            </div>
+        </div>
+
+        <br>
+
+        <div id="caixinha">
+            <div id="tituloProduto">TITULO</div>
+            
+            <div id="informacoesProduto">
+                <div id="imagem">
+                    <img src="blusa.jpg" id="imgProduto"></img>
+                </div>
+                
+            </div>
+
+            <div id="botoesCaixinha">
+                <div class="btnCaixinha"></div>
+                <div class="btnCaixinha"></div>
+                <div class="btnCaixinha"></div>
+            </div>
+        </div>
+
+        <br>
+
+        <div id="caixinha">
+            <div id="tituloProduto">TITULO</div>
+            
+            <div id="informacoesProduto">
+                <div id="imagem">
+                    <img src="blusa.jpg" id="imgProduto"></img>
+                </div>
+                
+            </div>
+
+            <div id="botoesCaixinha">
+                <div class="btnCaixinha"></div>
+                <div class="btnCaixinha"></div>
+                <div class="btnCaixinha"></div>
+            </div>
         </div>
     </div>
 </div>
